--- a/lambda_db/serverless.yml
+++ b/lambda_db/serverless.yml
@@ -16,6 +16,7 @@ functions:
       - http:
           path: /query/
           method: post
+          cors: true
 
     layers:
       - arn:aws:lambda:us-east-1:725820063953:layer:WorldCitiesDatabase:1
